--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "puppeteer": "^19.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^10.0.9",
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
