Finished basic functionality

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "timers": "^0.1.1",
     "web-vitals": "^2.1.4",
     "xml2js": "^0.4.23"
