--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "buffer": "^6.0.3",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
     "puppeteer": "^19.3.0",
     "react": "^18.2.0",
